# sls-rekognition-bot

./: .gitignore  README.md  app.py  devtools.py  pyproject.toml  requirements.txt  zappa_settings.json
templates/: top_for_emotion.html
utils/: __init__.py  dynamo.py  lambda_client.py  prepare_env.py  rekognition.py  s3.py  telegram.py  text.py
