[tool.poetry]
name = "serverless_rekognition_zappa"
version = "0.1.0"
description = ""
authors = ["Mike <mikhail.g.novikov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1"
zappa = "^0.48.2"
boto3 = "^1.9"

[tool.poetry.dev-dependencies]
black = {version = "^18.3-alpha.0", allows-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
